OLMIS-2619: fixed some content align for numeric/date inputs

--- a/src/openlmis-form/form.scss
+++ b/src/openlmis-form/form.scss
@@ -183,6 +183,11 @@ fieldset,
     @extend form;
 }
 
-input.number {
+input.number,
+input[type="number"] {
     text-align: right;
+}
+
+input.date {
+    text-align: left;
 }
